--- a/LinkFinder/app/build.gradle
+++ b/LinkFinder/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
 
+    compile 'org.jsoup:jsoup:1.9.1'
+
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'org.glassfish:javax.annotation:10.0-b28'
     apt 'com.google.dagger:dagger-compiler:2.0.2'
